--- a/To-Do-list/todo.html
+++ b/To-Do-list/todo.html
@@ -58,8 +58,9 @@
                 <h2 class="modal-title">Pilih Contoh Project</h2>
                 <ol class="move">
                     <li><a class="move-list" href="/To Do list/todo.html">To Do List</a></li>
-                    <li><a class="move-list" href="/Calculator/calculator.html">Calculator</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
                     <li><a class="move-list" href="/Form Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
+                    <li><a class="move-list" href="/Gallery Gambar Popup/gallery.html">Gallery Popup</a></li>
                 </ol>               
                 <button class="modalClose" popovertarget="modalOpen">Close</button>
             </div>
