Update link todo, calculator, mahasiswa, gallery

--- a/Form-Mahasiswa/mahasiswa.html
+++ b/Form-Mahasiswa/mahasiswa.html
@@ -220,11 +220,11 @@
             </button>
             <div class="p-6 rounded-xl shadow-lg" id="modalOpen" popover="">
                 <h2 class="font-bold mb-4">Pilih Contoh Project</h2>
-                <ol class="list-decimal">
-                    <li><a class="move-list" href="/Mini-Project/To Do list/todo.html">To Do List</a></li>
+                <ol class="list-decimal px-4 mb-4">
+                    <li><a class="border-b-2" href="/Mini-Project/To-Do-list/todo.html">To Do List</a></li>
                     <li><a class="border-b-2" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
-                    <li><a class="border-b-2" href="/Form Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
-                    <li><a class="move-list" href="/Gallery Gambar Popup/gallery.html">Gallery Popup</a></li>
+                    <li><a class="border-b-2" href="/Mini-Project/Form-Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
+                    <li><a class="border-b-2" href="/Mini-Project/Gallery-Popup/gallery.html">Gallery Popup</a></li>
                 </ol>               
                 <button class="px-2 mt-2 text-white rounded-md bg-red-500" popovertarget="modalOpen">Close</button>
             </div>
