--- a/To-Do-list/todo.html
+++ b/To-Do-list/todo.html
@@ -57,10 +57,10 @@
             <div id="modalOpen" popover="">
                 <h2 class="modal-title">Pilih Contoh Project</h2>
                 <ol class="move">
-                    <li><a class="move-list" href="/To Do list/todo.html">To Do List</a></li>
+                    <li><a class="move-list" href="/Mini-Project/To-Do-list/todo.html">To Do List</a></li>
                     <li><a class="move-list" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
-                    <li><a class="move-list" href="/Form Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
-                    <li><a class="move-list" href="/Gallery Gambar Popup/gallery.html">Gallery Popup</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Form-Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Gallery-Popup/gallery.html">Gallery Popup</a></li>
                 </ol>               
                 <button class="modalClose" popovertarget="modalOpen">Close</button>
             </div>
