--- a/Gallery-Popup/gallery.html
+++ b/Gallery-Popup/gallery.html
@@ -62,10 +62,10 @@
             <div id="modalOpen" popover="">
                 <h2>Pilih Project</h2>
                 <ol class="move">
-                    <li><a class="move-list" href="/Mini-Project/To Do list/todo.html">To Do List</a></li>
+                    <li><a class="move-list" href="/Mini-Project/To-Do-list/todo.html">To Do List</a></li>
                     <li><a class="move-list" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
-                    <li><a class="move-list" href="/Form Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
-                    <li><a class="move-list" href="/Gallery Gambar Popup/gallery.html">Gallery Popup</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Form-Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Gallery-Popup/gallery.html">Gallery Popup</a></li>
                 </ol> 
                 <button id="closeModal" popovertarget="modalOpen">Close</button>
             </div>
