--- a/Form-Mahasiswa/mahasiswa.html
+++ b/Form-Mahasiswa/mahasiswa.html
@@ -41,7 +41,7 @@
           </div>
           <div>
             <label for="Jurusan" class="block py-2 text-lg font-bold">Masukkan Jrusan</label>
-            <select id="jurusan" type="option" placeholder="Nama Lengkap" required
+            <select id="jurusan" type="option" placeholder="Jurusan" required
             class="block w-full p-2 shadow-md rounded-md appearance-none focus:outline-blue-500">
               <option value="">- Masukkan Jurusan -</option>
               <option value="Teknik Informatika">Teknik Informatika</option>
@@ -225,6 +225,7 @@
                     <li><a class="border-b-2" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
                     <li><a class="border-b-2" href="/Mini-Project/Form-Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
                     <li><a class="border-b-2" href="/Mini-Project/Gallery-Popup/gallery.html">Gallery Popup</a></li>
+                    <li><a class="border-b-2" href="/Mini-Project/Absensi/absensi.html">Absensi</a></li>
                 </ol>               
                 <button class="px-2 mt-2 text-white rounded-md bg-red-500" popovertarget="modalOpen">Close</button>
             </div>
