--- a/Gallery-Popup/gallery.html
+++ b/Gallery-Popup/gallery.html
@@ -66,6 +66,7 @@
                     <li><a class="move-list" href="/Mini-Project/Calculator/calculator.html">Calculator</a></li>
                     <li><a class="move-list" href="/Mini-Project/Form-Mahasiswa/mahasiswa.html">Form Mahasiswa</a></li>
                     <li><a class="move-list" href="/Mini-Project/Gallery-Popup/gallery.html">Gallery Popup</a></li>
+                    <li><a class="move-list" href="/Mini-Project/Absensi/absensi.html">Absensi</a></li>
                 </ol> 
                 <button id="closeModal" popovertarget="modalOpen">Close</button>
             </div>
